Bug 9100 - hp_only quirk needed for lifebook p7010
Summary: hp_only quirk needed for lifebook p7010
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-29 04:06 UTC by Khashayar Naderehvandi
Modified: 2009-03-26 11:45 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.27
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmidecode output on a lifebook p7010 (11.99 KB, text/plain)
2007-09-29 04:07 UTC, Khashayar Naderehvandi
Details

Description Khashayar Naderehvandi 2007-09-29 04:06:23 UTC
I should have reported this bug a long time ago. On my lifebook p7010 I need to add 

options snd-intel8x0 ac97_quirk=hp_only

to have the master volume working properly. This has been the case since I started using linux a couple of years ago, so I guess the lifebook p7010 just has to be added to the list that needs the quirk by default. Please tell me if I need to attach additional information.
Comment 1 Khashayar Naderehvandi 2007-09-29 04:07:06 UTC
Created attachment 12987 [details]
dmidecode output on a lifebook p7010

Here's the output from dmidecode.
Comment 2 Takashi Iwai 2007-12-14 09:30:03 UTC
Please give the output of "lspci -nv" for the sound device.  We identify the specific device via PCI SSID.
Comment 3 Khashayar Naderehvandi 2007-12-15 03:14:09 UTC
This should be it:
00:1f.5 0401: 8086:24c5 (rev 03)
        Subsystem: 10cf:127d
        Flags: bus master, medium devsel, latency 0, IRQ 11
        I/O ports at 1800 [size=256]
        I/O ports at 1c00 [size=64]
        Memory at d0100c00 (32-bit, non-prefetchable) [size=512]
        Memory at d0100800 (32-bit, non-prefetchable) [size=256]
        Capabilities: [50] Power Management version 2

Thanks!
Comment 4 Alan 2008-09-23 14:00:33 UTC
Did this one get fixed ?
Comment 5 Khashayar Naderehvandi 2008-09-23 14:38:28 UTC
I'm on a 2.6.27 kernel nowadays, and unfortunately it has still not been fixed.
Comment 6 Takashi Iwai 2008-09-24 01:15:43 UTC
Sorry, overlooked this.
Fixed for 2.6.28 kernel on sound git tree now.

Note You need to log in before you can comment on or make changes to this bug.