ALSA: intel8x0 - Add quirk for Fujitsu Lifebook P7010

Fujitsu Lifebook P7010 requires ac97_quirk=hp_only.
    http://bugzilla.kernel.org/show_bug.cgi?id=9100

Signed-off-by: Takashi Iwai <tiwai@suse.de>
Signed-off-by: Jaroslav Kysela <perex@perex.cz>